--- a/index.html
+++ b/index.html
@@ -32,20 +32,17 @@
       position: relative;
     }
 
+    .project-title {
+      font-size: 1.4em;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 20px;
+      user-select: none;
+    }
+
     h2 {
       text-align: center;
       margin-bottom: 25px;
-    }
-
-    /* اسم المشروع فوق */
-    .project-title {
-      position: absolute;
-      top: 12px;
-      left: 20px;
-      font-weight: 700;
-      font-size: 1.1em;
-      color: #00c6ff;
-      user-select: none;
     }
 
     label {
@@ -68,7 +65,6 @@
     button {
       width: 100%;
       padding: 12px;
-      background: #00c6ff;
       background: linear-gradient(to right, #0072ff, #00c6ff);
       border: none;
       border-radius: 6px;
@@ -103,7 +99,6 @@
     }
 
     .logout {
-      background: #ff4e50;
       background: linear-gradient(to right, #f85032, #e73827);
     }
 
@@ -111,32 +106,31 @@
       color: #aaa;
     }
 
-    /* زر اللغة */
+    #errorMsg {
+      color: #ff4e50;
+      font-weight: bold;
+      margin-top: 10px;
+      display: none;
+      text-align: center;
+    }
+
     .lang-switch {
       position: absolute;
-      top: 10px;
-      right: 20px;
-      background-color: #005bbb; /* أزرق داكن */
-      color: white;
+      top: 15px;
+      left: 15px;
+      background-color: #0072ff;
       border: none;
-      font-weight: 700;
-      padding: 6px 10px;
+      color: white;
+      font-weight: bold;
+      padding: 6px 12px;
       border-radius: 6px;
       cursor: pointer;
-      width: 38px;
-      height: 38px;
-      font-size: 1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: background-color 0.3s ease;
-      box-shadow: 0 0 8px rgba(0, 91, 187, 0.7);
       user-select: none;
+      transition: 0.3s ease;
     }
 
     .lang-switch:hover {
-      background-color: #0072ff; /* أزرق أفتح */
-      box-shadow: 0 0 12px rgba(0, 114, 255, 0.9);
+      background-color: #005bb5;
     }
 
     @media screen and (max-width: 500px) {
@@ -148,51 +142,39 @@
 </head>
 <body>
   <div class="container">
+    <button class="lang-switch" onclick="toggleLanguage()">EN</button>
     <div class="project-title" id="projectTitle">Smart Planting</div>
-
-    <button class="lang-switch" id="langSwitch" onclick="toggleLang()">ع</button>
 
     <!-- تسجيل الدخول -->
     <div id="login">
       <h2 id="loginTitle">تسجيل الدخول</h2>
       <form onsubmit="return login(event)">
-        <label id="labelUsername">اسم المستخدم</label>
+        <label id="usernameLabel">اسم المستخدم</label>
         <input type="text" id="username" required />
 
-        <label id="labelPassword">كلمة المرور</label>
+        <label id="passwordLabel">كلمة المرور</label>
         <input type="password" id="password" required />
 
         <button type="submit" id="loginBtn">دخول</button>
+        <p id="errorMsg"></p>
       </form>
     </div>
 
     <!-- لوحة التحكم -->
     <div id="dashboard">
       <h2 id="dashboardTitle">لوحة تحكم الري الذكي</h2>
-      <p>
-        <span id="welcomeText">مرحبًا،</span>
-        <span id="usernameDisplay"></span>
-      </p>
+      <p id="welcomeText">مرحبًا، <span id="usernameDisplay"></span></p>
 
       <div class="sensor-box">
-        <h3 id="sensorReadingsTitle">قراءات الحساسات</h3>
-        <p>
-          <span class="sensor-label" id="tempLabel">درجة الحرارة:</span>
-          <span id="temp" class="status">--</span> °C
-        </p>
-        <p>
-          <span class="sensor-label" id="humidityLabel">الرطوبة:</span>
-          <span id="humidity" class="status">--</span> %
-        </p>
+        <h3 id="sensorTitle">قراءات الحساسات</h3>
+        <p><span class="sensor-label" id="tempLabel">درجة الحرارة:</span> <span id="temp" class="status">--</span> °C</p>
+        <p><span class="sensor-label" id="humidityLabel">الرطوبة:</span> <span id="humidity" class="status">--</span> %</p>
       </div>
 
       <div class="control-box">
-        <h3 id="pumpControlTitle">التحكم في المضخة</h3>
-        <p>
-          <span id="pumpStatusLabel">الحالة الحالية:</span>
-          <span id="pumpStatus" class="status">مطفأة</span>
-        </p>
-        <button onclick="togglePump()" id="togglePumpBtn">تشغيل / إيقاف</button>
+        <h3 id="controlTitle">التحكم في المضخة</h3>
+        <p id="pumpStatusText">الحالة الحالية: <span id="pumpStatus" class="status">مطفأة</span></p>
+        <button onclick="togglePump()" id="pumpBtn">تشغيل / إيقاف</button>
       </div>
 
       <button class="logout" onclick="logout()" id="logoutBtn">تسجيل الخروج</button>
@@ -201,142 +183,92 @@
 
   <script>
     const users = {
-      user1: 'pass1',
-      user2: 'pass2',
+      user1: "pass1",
+      user2: "pass2",
     };
 
     let pumpOn = false;
-    let currentLang = 'ar';
+    let currentLang = "ar";
 
-    // نصوص بالعربية والإنجليزية
     const texts = {
       ar: {
-        projectName: 'Smart Planting',
-        loginTitle: 'تسجيل الدخول',
-        labelUsername: 'اسم المستخدم',
-        labelPassword: 'كلمة المرور',
-        loginBtn: 'دخول',
-        loginError: '❌ اسم المستخدم أو كلمة المرور غير صحيحة',
-        dashboardTitle: 'لوحة تحكم الري الذكي',
-        welcomeText: 'مرحبًا،',
-        sensorReadingsTitle: 'قراءات الحساسات',
-        tempLabel: 'درجة الحرارة:',
-        humidityLabel: 'الرطوبة:',
-        pumpControlTitle: 'التحكم في المضخة',
-        pumpStatusLabel: 'الحالة الحالية:',
-        pumpOn: 'شغالة',
-        pumpOff: 'مطفأة',
-        togglePumpBtn: 'تشغيل / إيقاف',
-        logoutBtn: 'تسجيل الخروج',
-        langButton: 'ع',
+        loginTitle: "تسجيل الدخول",
+        usernameLabel: "اسم المستخدم",
+        passwordLabel: "كلمة المرور",
+        loginBtn: "دخول",
+        errorWrong: "❌ اسم المستخدم أو كلمة المرور غير صحيحة",
+        dashboardTitle: "لوحة تحكم الري الذكي",
+        welcomeText: "مرحبًا، ",
+        sensorTitle: "قراءات الحساسات",
+        tempLabel: "درجة الحرارة:",
+        humidityLabel: "الرطوبة:",
+        controlTitle: "التحكم في المضخة",
+        pumpStatusOn: "شغالة",
+        pumpStatusOff: "مطفأة",
+        pumpStatusText: "الحالة الحالية: ",
+        pumpBtn: "تشغيل / إيقاف",
+        logoutBtn: "تسجيل الخروج",
+        projectTitle: "Smart Planting"
       },
       en: {
-        projectName: 'Smart Planting',
-        loginTitle: 'Login',
-        labelUsername: 'Username',
-        labelPassword: 'Password',
-        loginBtn: 'Login',
-        loginError: '❌ Incorrect username or password',
-        dashboardTitle: 'Smart Irrigation Dashboard',
-        welcomeText: 'Welcome,',
-        sensorReadingsTitle: 'Sensor Readings',
-        tempLabel: 'Temperature:',
-        humidityLabel: 'Humidity:',
-        pumpControlTitle: 'Pump Control',
-        pumpStatusLabel: 'Current status:',
-        pumpOn: 'On',
-        pumpOff: 'Off',
-        togglePumpBtn: 'Toggle Pump',
-        logoutBtn: 'Logout',
-        langButton: 'EN',
-      },
+        loginTitle: "Login",
+        usernameLabel: "Username",
+        passwordLabel: "Password",
+        loginBtn: "Login",
+        errorWrong: "❌ Wrong username or password",
+        dashboardTitle: "Smart Irrigation Dashboard",
+        welcomeText: "Welcome, ",
+        sensorTitle: "Sensor Readings",
+        tempLabel: "Temperature:",
+        humidityLabel: "Humidity:",
+        controlTitle: "Pump Control",
+        pumpStatusOn: "On",
+        pumpStatusOff: "Off",
+        pumpStatusText: "Current Status: ",
+        pumpBtn: "Toggle Pump",
+        logoutBtn: "Logout",
+        projectTitle: "Smart Planting"
+      }
     };
 
-    function setLanguage(lang) {
-      currentLang = lang;
-      document.documentElement.lang = lang;
-      document.body.dir = lang === 'ar' ? 'rtl' : 'ltr';
+    function translateUI() {
+      const t = texts[currentLang];
+      document.getElementById("loginTitle").innerText = t.loginTitle;
+      document.getElementById("usernameLabel").innerText = t.usernameLabel;
+      document.getElementById("passwordLabel").innerText = t.passwordLabel;
+      document.getElementById("loginBtn").innerText = t.loginBtn;
+      document.getElementById("dashboardTitle").innerText = t.dashboardTitle;
+      document.getElementById("welcomeText").childNodes[0].textContent = t.welcomeText;
+      document.getElementById("sensorTitle").innerText = t.sensorTitle;
+      document.getElementById("tempLabel").innerText = t.tempLabel;
+      document.getElementById("humidityLabel").innerText = t.humidityLabel;
+      document.getElementById("controlTitle").innerText = t.controlTitle;
+      document.getElementById("pumpStatusText").childNodes[0].textContent = t.pumpStatusText;
+      document.getElementById("pumpBtn").innerText = t.pumpBtn;
+      document.getElementById("logoutBtn").innerText = t.logoutBtn;
+      document.getElementById("projectTitle").innerText = t.projectTitle;
 
-      // تحديث النصوص
-      document.getElementById('projectTitle').innerText = texts[lang].projectName;
-      document.getElementById('loginTitle').innerText = texts[lang].loginTitle;
-      document.getElementById('labelUsername').innerText = texts[lang].labelUsername;
-      document.getElementById('labelPassword').innerText = texts[lang].labelPassword;
-      document.getElementById('loginBtn').innerText = texts[lang].loginBtn;
-      document.getElementById('dashboardTitle').innerText = texts[lang].dashboardTitle;
-      document.getElementById('welcomeText').innerText = texts[lang].welcomeText;
-      document.getElementById('sensorReadingsTitle').innerText = texts[lang].sensorReadingsTitle;
-      document.getElementById('tempLabel').innerText = texts[lang].tempLabel;
-      document.getElementById('humidityLabel').innerText = texts[lang].humidityLabel;
-      document.getElementById('pumpControlTitle').innerText = texts[lang].pumpControlTitle;
-      document.getElementById('pumpStatusLabel').innerText = texts[lang].pumpStatusLabel;
-      document.getElementById('pumpStatus').innerText = pumpOn ? texts[lang].pumpOn : texts[lang].pumpOff;
-      document.getElementById('togglePumpBtn').innerText = texts[lang].togglePumpBtn;
-      document.getElementById('logoutBtn').innerText = texts[lang].logoutBtn;
-      document.getElementById('langSwitch').innerText = texts[lang].langButton;
+      // غير اتجاه الصفحة حسب اللغة
+      document.body.dir = currentLang === "ar" ? "rtl" : "ltr";
+
+      // غير نص زر التبديل للغة الثانية
+      document.querySelector(".lang-switch").innerText = currentLang === "ar" ? "EN" : "ع";
     }
 
-    function toggleLang() {
-      if (currentLang === 'ar') {
-        setLanguage('en');
-      } else {
-        setLanguage('ar');
-      }
+    function toggleLanguage() {
+      currentLang = currentLang === "ar" ? "en" : "ar";
+      translateUI();
     }
 
     function login(event) {
       event.preventDefault();
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value;
+      const errorMsg = document.getElementById("errorMsg");
 
       if (users[username] === password) {
-        localStorage.setItem('loggedInUser', username);
+        errorMsg.style.display = "none";
+        localStorage.setItem("loggedInUser", username);
         showDashboard();
       } else {
-        alert(texts[currentLang].loginError);
-      }
-    }
-
-    function showDashboard() {
-      const user = localStorage.getItem('loggedInUser');
-      if (user) {
-        document.getElementById('login').style.display = 'none';
-        document.getElementById('dashboard').style.display = 'block';
-        document.getElementById('usernameDisplay').innerText = user;
-
-        // بيانات مؤقتة للعرض - اربطها بقراءة من ESP32 لاحقًا
-        document.getElementById('temp').innerText = '27.5';
-        document.getElementById('humidity').innerText = '52';
-        document.getElementById('pumpStatus').innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
-        document.getElementById('pumpStatus').style.color = pumpOn ? '#00ffae' : '#ff4e50';
-      } else {
-        document.getElementById('login').style.display = 'block';
-        document.getElementById('dashboard').style.display = 'none';
-      }
-    }
-
-    function togglePump() {
-      pumpOn = !pumpOn;
-      document.getElementById('pumpStatus').innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
-      document.getElementById('pumpStatus').style.color = pumpOn ? '#00ffae' : '#ff4e50';
-
-      // هنا تقدر ترسل أمر للـ ESP32 باستخدام fetch()
-      // fetch(http://esp32.local/pump?status=${pumpOn ? 'on' : 'off'});
-    }
-
-    function logout() {
-      localStorage.removeItem('loggedInUser');
-      // بدل location.reload() نعرض شاشة تسجيل الدخول مباشرة
-      document.getElementById('dashboard').style.display = 'none';
-      document.getElementById('login').style.display = 'block';
-      document.getElementById('username').value = '';
-      document.getElementById('password').value = '';
-    }
-
-    window.onload = function () {
-      setLanguage('ar'); // البداية بالعربية
-      showDashboard();
-    };
-  </script>
-</body>
-</html>
+        errorMsg.innerText = texts[currentLang].errorWrong
